--- a/CSS/help.css
+++ b/CSS/help.css
@@ -175,6 +175,12 @@ main {
   justify-content: center;
   margin-right: 5rems;
 }
+.btn-textwrapper{
+  justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
 
 .accordion{
   background-color: #0ccf87;
@@ -293,7 +299,7 @@ mark {
 .tips {
   background-color: none;
   margin-right: 0px;
-  margin-left: 70px;
+  margin-left: 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -308,19 +314,14 @@ mark {
   overflow: hidden;
 }
 
-
-
-@media screen and (min-width: 900px) {
+@media only screen and (min-width: 900px) {
   .tips-buttons{
     padding-top: 10px;
     display: flex;
-      width: 90%;
-      justify-content: space-evenly;
+    justify-content: space-evenly;
     
   }
 }
-
-
 
 /*FOOTER STYLES*/
 
@@ -382,6 +383,11 @@ footer h2 {
     display: flex;
     flex-direction: column;
     align-self: center;
+  }
+  .btn-textwrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   .contact-icon span,
